tests/snapshots/run_wpt_conformance__litert_batchNormalization_default___hardSwish.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "subgraph.https.any.js",
    "batchNormalization default + hardSwish",
    "litert",
    "PASS",
)
